# fastapi-twitter-petproject

./: .example.env  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_29_2331-5da895aa9312_create_tables_users_and_tweets_create_.py  2025_04_29_2334-1076a2805f9c_create_table_likes_create_relation_.py  2025_04_29_2335-5504bc30578c_create_table_medias_create_relation_.py  2025_04_30_1629-65534274eb03_create_association_table_folowwers.py  2025_04_30_1711-28064de989fb_rename_column.py  2025_04_30_1727-5b71b43666a9_unique_constraint_between_columns_.py  2025_05_07_2054-687b1b846521_change_len_api_key.py
client/: Dockerfile  nginx.conf
client/static/js/: app.ee2cdef2.js
grafana/provisioning/dashboards/: config.yml  fastapi_app.json
grafana/provisioning/datasources/: prometheus.yml
prometheus/: prometheus.yml
server/: Dockerfile  create_app.py  error_handlers.py  main.py
server/api/: dependencies.py
server/api/crud/: crud_likes.py  crud_medias.py  crud_tweets.py  crud_users.py
server/api/routers/: __init__.py  users_routers.py
server/api/routes/: __init__.py  routes_medias.py  routes_tweets.py  routes_users.py
server/core/: config.py
server/core/dependencies/: authenticate.py
server/core/middlewares/: __init__.py  log_new_request.py
server/core/models/: __init__.py  db_helper.py  model_likes.py  model_medias.py  model_tweets.py  model_users.py  users_model.py
server/core/schemas/: schemas_base.py  schemas_likes.py  schemas_medias.py  schemas_tweets.py  schemas_users.py
server/utils/: create_mock_data.py  hashed_api_key.py  media_writer.py
tests/: conftest.py
tests/data/: data_db_for_tests.py  data_db_mock.py
tests/testing_integration/crud/: test_crud_likes.py  test_crud_medias.py  test_crud_tweets.py  test_crud_users.py
tests/testing_integration/database/: test_database.py
tests/testing_system/routes/: test_routes_medias.py  test_routes_tweets.py  test_routes_users.py
tests/testing_unit/schemas/: test_schemas_tweets.py  test_schemas_users.py
tests/testing_unit/utils/: test_media_writer.py
tests/tests_unit/: conftest.py
tests/tests_unit/tests_utils/: conftest.py  test_media_writer.py
