[project]
name = "twitter-social-network"
version = "0.1.0"
description = "An analog of the social network twitter using FastAPI (uvicorn) and Pydantic, ORM SQLAlchemy with PostgreSQL and Nginx."
authors = [
    { name = "Artyom Kadikov" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.prod.dependencies]
fastapi = "^0.115.12"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.12"
black = "^25.1.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"
wemake-python-styleguide = "^1.1.0"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79