[project]
name = "twitter-social-network"
version = "0.1.0"
description = "An analog of the social network twitter using FastAPI (uvicorn) and Pydantic, ORM SQLAlchemy with PostgreSQL and Nginx."
authors = [
    { name = "Artyom Kadikov" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.prod.dependencies]
fastapi = "^0.115.12"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"
sqlalchemy = {version = "2.0.20", extras = ["asyncio"]}
asyncpg = "^0.30.0"
alembic = "^1.15.2"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.12"
pre-commit = "^4.2.0"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"
sqlalchemy = {version = "2.0.20", extras = ["asyncio"]}
asyncpg = "^0.30.0"
alembic = "^1.15.2"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
mypy = "1.13.0"

[tool.isort]
profile = "black"
known_first_party = ["core", "api", "server"]

[tool.black]
line-length = 79
